Remove emojis from visualizacion-datos.ipynb for professional formatting
- Cleaned header removing chart, checkmark, and tool emojis
- Updated theory section removing trophy, trending, target, and graphics emojis
- Cleaned configuration section removing art palette, chart, and lightning emojis
- Updated visualization code removing stadium and soccer ball emojis from titles
- Cleaned summary and congratulations sections removing party and celebration emojis
- Preserved all educational content about data visualization with Seaborn
- Maintained functionality: all visualization examples and code templates intact

--- a/bloque-2/semana-4/visualizacion-datos.ipynb
+++ b/bloque-2/semana-4/visualizacion-datos.ipynb
@@ -9,21 +9,21 @@
     "\n",
     "## Ciencia de Datos en el Deporte - Fundamentos con Python\n",
     "\n",
-    "### 📊 **Bloque 2: Análisis de Datos Deportivos**\n",
+    "### **Bloque 2: Análisis de Datos Deportivos**\n",
     "\n",
     "---\n",
     "\n",
     "**Objetivos de Aprendizaje:**\n",
-    "- ✅ Entender por qué los gráficos son útiles\n",
-    "- ✅ Crear gráficos simples con seaborn\n",
-    "- ✅ Comparar equipos locales vs visitantes\n",
-    "- ✅ Hacer gráficos bonitos y fáciles de entender\n",
+    "- Entender por qué los gráficos son útiles\n",
+    "- Crear gráficos simples con seaborn\n",
+    "- Comparar equipos locales vs visitantes\n",
+    "- Hacer gráficos bonitos y fáciles de entender\n",
     "\n",
     "**Herramientas:**\n",
-    "- 🐍 Python\n",
-    "- 📊 Pandas (datos)\n",
-    "- 🎨 Seaborn (gráficos bonitos)\n",
-    "- 📈 Matplotlib (mostrar gráficos)\n",
+    "- Python\n",
+    "- Pandas (datos)\n",
+    "- Seaborn (gráficos bonitos)\n",
+    "- Matplotlib (mostrar gráficos)\n",
     "\n",
     "---"
    ]
@@ -37,7 +37,7 @@
     "\n",
     "### 1.1 Los Gráficos son Mejores que las Tablas\n",
     "\n",
-    "📊 **Es más fácil ver patrones en gráficos que en números**\n",
+    "**Es más fácil ver patrones en gráficos que en números**\n",
     "\n",
     "Imagina que tienes estos datos:\n",
     "- Equipo A: 25 goles\n",
@@ -46,7 +46,7 @@
     "\n",
     "¿Qué es más fácil de entender?\n",
     "\n",
-    "**Una tabla con números** ❌ (aburrida)\n",
+    "**Una tabla con números** (aburrida)\n",
     "```\n",
     "Equipo | Goles\n",
     "A      | 25\n",
@@ -54,26 +54,26 @@
     "C      | 30\n",
     "```\n",
     "\n",
-    "**Un gráfico** ✅ (¡se ve inmediatamente que C es el mejor!)\n",
+    "**Un gráfico** (¡se ve inmediatamente que C es el mejor!)\n",
     "\n",
     "### 1.2 ¿Para qué Sirven los Gráficos en Fútbol?\n",
     "\n",
-    "- 🏆 **Ver quién es mejor**: ¿Qué equipo anota más?\n",
-    "- 📈 **Encontrar patrones**: ¿Los equipos locales ganan más?\n",
-    "- 🎯 **Tomar decisiones**: ¿En qué jugador invertir?\n",
-    "- 📊 **Comparar fácilmente**: Varios equipos a la vez\n",
+    "- **Ver quién es mejor**: ¿Qué equipo anota más?\n",
+    "- **Encontrar patrones**: ¿Los equipos locales ganan más?\n",
+    "- **Tomar decisiones**: ¿En qué jugador invertir?\n",
+    "- **Comparar fácilmente**: Varios equipos a la vez\n",
     "\n",
     "### 1.3 Tipos de Gráficos Simples\n",
     "\n",
-    "#### 📊 **Gráfico de Barras**\n",
+    "#### **Gráfico de Barras**\n",
     "- Para comparar categorías\n",
     "- Ejemplo: Goles por equipo\n",
     "\n",
-    "#### 📈 **Gráfico de Líneas**  \n",
+    "#### **Gráfico de Líneas**  \n",
     "- Para ver cambios en el tiempo\n",
     "- Ejemplo: Goles por mes\n",
     "\n",
-    "#### 🔍 **Gráfico de Puntos**\n",
+    "#### **Gráfico de Puntos**\n",
     "- Para ver relaciones\n",
     "- Ejemplo: ¿Más tiros = más goles?"
    ]
@@ -95,9 +95,9 @@
     "- **NumPy**: Para crear datos de ejemplo\n",
     "\n",
     "### ¿Por qué Seaborn?\n",
-    "- 🎨 Gráficos bonitos sin esfuerzo\n",
-    "- 📊 Perfecto para análisis de deportes\n",
-    "- ⚡ Menos código = más tiempo para analizar"
+    "- Gráficos bonitos sin esfuerzo\n",
+    "- Perfecto para análisis de deportes\n",
+    "- Menos código = más tiempo para analizar"
    ]
   },
   {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "81cfe9be",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
     "\n",
     "# Crear gráficos con seaborn (súper fácil!)\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 8))\n",
-    "fig.suptitle('🏟️ LOCAL vs VISITANTE', fontsize=16, fontweight='bold')\n",
+    "fig.suptitle('LOCAL vs VISITANTE', fontsize=16, fontweight='bold')\n",
     "\n",
     "# Gráfico 1: Goles promedio\n",
     "sns.barplot(data=df_comparacion, x='Tipo', y='Goles', ax=axes[0, 0])\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "57b648a4",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
     "\n",
     "# Crear diferentes tipos de gráficos\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 8))\n",
-    "fig.suptitle('📊 DIFERENTES TIPOS DE GRÁFICOS', fontsize=16, fontweight='bold')\n",
+    "fig.suptitle('DIFERENTES TIPOS DE GRÁFICOS', fontsize=16, fontweight='bold')\n",
     "\n",
     "# 1. Gráfico de puntos (scatter)\n",
     "sns.scatterplot(data=df_partidos, x='Tiros_Local', y='Goles_Local', ax=axes[0, 0])\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8b989f94",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
     "plt.plot(minutos, goles_visitante, marker='s', linewidth=3, markersize=8,\n",
     "         label='Equipo Visitante', color='red')\n",
     "\n",
-    "plt.title('⚽ ¡LA REMONTADA ÉPICA!', size=16, fontweight='bold')\n",
+    "plt.title('¡LA REMONTADA ÉPICA!', size=16, fontweight='bold')\n",
     "plt.xlabel('Minuto del Partido')\n",
     "plt.ylabel('Goles')\n",
     "plt.legend()\n",
@@ -564,30 +564,30 @@
     "\n",
     "### 7.1 ¿Qué Aprendimos Hoy?\n",
     "\n",
-    "✅ **Los gráficos son mejores que las tablas** - Se ven los patrones más fácil  \n",
-    "✅ **Seaborn hace gráficos bonitos** - Con muy poco código  \n",
-    "✅ **Diferentes tipos de gráficos** - Barras, líneas, puntos, histogramas  \n",
-    "✅ **Analizar datos deportivos** - Comparar locales vs visitantes  \n",
-    "✅ **Contar historias con gráficos** - Como la remontada épica  \n",
+    "**Los gráficos son mejores que las tablas** - Se ven los patrones más fácil  \n",
+    "**Seaborn hace gráficos bonitos** - Con muy poco código  \n",
+    "**Diferentes tipos de gráficos** - Barras, líneas, puntos, histogramas  \n",
+    "**Analizar datos deportivos** - Comparar locales vs visitantes  \n",
+    "**Contar historias con gráficos** - Como la remontada épica  \n",
     "\n",
     "### 7.2 Tipos de Gráficos que Usamos\n",
     "\n",
-    "📊 **sns.barplot()** - Para comparar categorías  \n",
-    "📈 **plt.plot()** - Para líneas de tiempo  \n",
-    "🔍 **sns.scatterplot()** - Para ver relaciones  \n",
-    "📊 **sns.histplot()** - Para ver distribuciones  \n",
-    "📦 **sns.boxplot()** - Para comparar grupos  \n",
+    "**sns.barplot()** - Para comparar categorías  \n",
+    "**plt.plot()** - Para líneas de tiempo  \n",
+    "**sns.scatterplot()** - Para ver relaciones  \n",
+    "**sns.histplot()** - Para ver distribuciones  \n",
+    "**sns.boxplot()** - Para comparar grupos  \n",
     "\n",
     "### 7.3 ¡Lo Más Importante!\n",
     "\n",
-    "🎯 **Seaborn hace todo más fácil** - Un comando, un gráfico bonito  \n",
-    "🎨 **Los gráficos cuentan historias** - Mejor que solo números  \n",
-    "⚽ **El fútbol es perfecto para aprender** - Datos interesantes y fáciles de entender"
+    "**Seaborn hace todo más fácil** - Un comando, un gráfico bonito  \n",
+    "**Los gráficos cuentan historias** - Mejor que solo números  \n",
+    "**El fútbol es perfecto para aprender** - Datos interesantes y fáciles de entender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d214769f",
    "metadata": {},
    "outputs": [
@@ -653,10 +653,10 @@
     "\n",
     "print(\"FÓRMULA MÁGICA PARA GRÁFICOS:\")\n",
     "print(\"\"\"\n",
-    "1️⃣ Importar seaborn: import seaborn as sns\n",
-    "2️⃣ Configurar tema: sns.set_theme()\n",
-    "3️⃣ Hacer gráfico: sns.barplot(data=df, x='columna1', y='columna2')\n",
-    "4️⃣ Mostrar: plt.show()\n",
+    "1. Importar seaborn: import seaborn as sns\n",
+    "2. Configurar tema: sns.set_theme()\n",
+    "3. Hacer gráfico: sns.barplot(data=df, x='columna1', y='columna2')\n",
+    "4. Mostrar: plt.show()\n",
     "\n",
     "¡Solo 4 pasos para gráficos profesionales!\n",
     "\"\"\")\n",
@@ -701,20 +701,20 @@
    "source": [
     "---\n",
     "\n",
-    "## 🎯 ¡Felicitaciones!\n",
+    "## ¡Felicitaciones!\n",
     "\n",
-    "### 🏆 Lo que Lograste Hoy\n",
+    "### Lo que Lograste Hoy\n",
     "\n",
-    "🎉 **¡Aprendiste a hacer gráficos profesionales!**\n",
+    "**¡Aprendiste a hacer gráficos profesionales!**\n",
     "\n",
-    "✅ **Entiendes por qué los gráficos son útiles**  \n",
-    "✅ **Sabes usar seaborn para hacer gráficos bonitos**  \n",
-    "✅ **Puedes comparar datos con gráficos de barras**  \n",
-    "✅ **Sabes hacer gráficos de línea para mostrar tiempo**  \n",
-    "✅ **Puedes usar gráficos de puntos para ver relaciones**  \n",
-    "✅ **Entiendes cómo los gráficos cuentan historias**  \n",
+    "**Entiendes por qué los gráficos son útiles**  \n",
+    "**Sabes usar seaborn para hacer gráficos bonitos**  \n",
+    "**Puedes comparar datos con gráficos de barras**  \n",
+    "**Sabes hacer gráficos de línea para mostrar tiempo**  \n",
+    "**Puedes usar gráficos de puntos para ver relaciones**  \n",
+    "**Entiendes cómo los gráficos cuentan historias**  \n",
     "\n",
-    "### 🚀 Fórmula del Éxito con Seaborn\n",
+    "### Fórmula del Éxito con Seaborn\n",
     "\n",
     "```python\n",
     "# Solo necesitas recordar esto:\n",
@@ -728,26 +728,26 @@
     "sns.histplot(...)   # Para distribuciones\n",
     "```\n",
     "\n",
-    "### 💡 Secreto Pro\n",
+    "### Secreto Pro\n",
     "\n",
     "**Seaborn > Matplotlib** para principiantes porque:\n",
-    "- 🎨 Hace gráficos bonitos automáticamente\n",
-    "- ⚡ Menos código = menos problemas\n",
-    "- 📊 Perfecto para análisis de datos\n",
-    "- 🎯 Fácil de aprender y usar\n",
+    "- Hace gráficos bonitos automáticamente\n",
+    "- Menos código = menos problemas\n",
+    "- Perfecto para análisis de datos\n",
+    "- Fácil de aprender y usar\n",
     "\n",
-    "### \udd25 Tu Siguiente Misión\n",
+    "### Tu Siguiente Misión\n",
     "\n",
     "¡Practica con tus propios datos! Puedes analizar:\n",
-    "- ⚽ Tu equipo favorito\n",
-    "- 🏀 Otros deportes\n",
-    "- 📊 Cualquier dato que te interese\n",
+    "- Tu equipo favorito\n",
+    "- Otros deportes\n",
+    "- Cualquier dato que te interese\n",
     "\n",
-    "### 🎊 ¡Sigue Practicando!\n",
+    "### ¡Sigue Practicando!\n",
     "\n",
     "Recuerda: **Los mejores analistas de datos empezaron como tú hoy**\n",
     "\n",
-    "**¡Ya tienes las herramientas para crear visualizaciones increíbles!** 🚀\n",
+    "**¡Ya tienes las herramientas para crear visualizaciones increíbles!**\n",
     "\n",
     "---"
    ]
