feat: Update notebook titles with correct week numbers (6-15)
- Update Bloque 2 notebooks: semana-6 through semana-10
- Update Bloque 3 notebooks: semana-11 through semana-14
- Bloque 1 notebooks already correctly numbered (semana-1 through semana-5)
- Semana-15 notebook was already correctly titled
- All notebooks now reflect their actual global week position in the course

This ensures consistency between folder names, documentation, and notebook content titles.

--- a/bloque-2/semana-10/analisis-interpretacion.ipynb
+++ b/bloque-2/semana-10/analisis-interpretacion.ipynb
@@ -5,24 +5,20 @@
    "id": "a26daf3e",
    "metadata": {},
    "source": [
-    "# **Semana 5: Mi Primer Análisis de Datos**\n",
+    "# **Semana 10: Mi Primer Análisis de Datos**\n",
     "\n",
-    "## Introducción a la Ciencia de Datos - Nivel Preparatoria\n",
-    "\n",
-    "### **Bloque 2: Analizando Datos de Fútbol**\n",
+    "## Bloque 2: Explorando Datos Deportivos con Python\n",
     "\n",
     "---\n",
     "\n",
-    "**Lo que vamos a aprender:**\n",
-    "- Calcular promedios y comparar números\n",
-    "- Hacer gráficos simples con nuestros datos\n",
-    "- Encontrar patrones básicos\n",
-    "- Sacar conclusiones de lo que vemos\n",
+    "**Lo que aprenderemos hoy:**\n",
+    "- Interpretar resultados de análisis estadísticos\n",
+    "- Comunicar hallazgos de manera clara y profesional\n",
+    "- Generar conclusiones basadas en evidencia de datos\n",
+    "- Preparar reportes básicos de análisis deportivo\n",
     "\n",
-    "**¿Qué necesitas saber?**\n",
-    "- Matemáticas básicas (promedios, sumas)\n",
-    "- Saber usar una computadora\n",
-    "- ¡Ganas de aprender!\n",
+    "**¿Por qué es interesante?**\n",
+    "¡Es hora de ser analistas deportivos! Aprenderemos a contar historias convincentes usando los datos que hemos explorado.\n",
     "\n",
     "---"
    ]
