--- a/bloque-2/semana-7/tipos-datos-futbol.ipynb
+++ b/bloque-2/semana-7/tipos-datos-futbol.ipynb
@@ -5,18 +5,20 @@
    "id": "bddaab91",
    "metadata": {},
    "source": [
-    "# Semana 2: Tipos de Datos en Fútbol\n",
+    "# Semana 7: Tipos de Datos en Fútbol\n",
     "\n",
-    "## Ciencia de Datos en el Deporte - Fundamentos con Python\n",
+    "## Bloque 2: Explorando Datos Deportivos con Python\n",
     "\n",
     "---\n",
     "\n",
-    "**Objetivos de aprendizaje:**\n",
-    "- Conocer los diferentes tipos de datos en el fútbol\n",
-    "- Ver ejemplos de datos de resultados, eventos y posiciones\n",
-    "- Entender cómo se organizan los datos deportivos\n",
-    "- Crear visualizaciones con seaborn\n",
-    "- Conocer conceptos básicos de filtrado de datos\n",
+    "**Lo que aprenderemos hoy:**\n",
+    "- Identificar diferentes tipos de datos en el fútbol\n",
+    "- Clasificar información: números, texto, fechas\n",
+    "- Limpiar y preparar datos para análisis\n",
+    "- Hacer filtros básicos con pandas\n",
+    "\n",
+    "**¿Por qué es interesante?**\n",
+    "¡No todos los datos son iguales! Aprenderemos a distinguir entre diferentes tipos de información futbolística.\n",
     "\n",
     "---"
    ]
