--- a/bloque-2/semana-8/estadistica-descriptiva.ipynb
+++ b/bloque-2/semana-8/estadistica-descriptiva.ipynb
@@ -5,25 +5,22 @@
    "id": "cd6b6975",
    "metadata": {},
    "source": [
-    "# **Semana 3: Estadística Descriptiva Básica**\n",
+    "# **Semana 8: Estadística Descriptiva Básica**\n",
     "\n",
-    "## Ciencia de Datos en el Deporte - Fundamentos con Python\n",
-    "\n",
-    "### **Bloque 2: Análisis de Datos Deportivos**\n",
+    "## Bloque 2: Explorando Datos Deportivos con Python\n",
     "\n",
     "---\n",
     "\n",
-    "**Objetivos de Aprendizaje:**\n",
-    "- Entender qué es estadística básica\n",
-    "- Calcular promedios y máximos\n",
-    "- Crear gráficos simples con seaborn\n",
-    "- Comparar datos de jugadores\n",
+    "**Lo que aprenderemos hoy:**\n",
+    "- Calcular estadísticas básicas: promedio, máximo, mínimo\n",
+    "- Entender qué significan en el contexto del fútbol  \n",
+    "- Usar pandas para obtener estadísticas automáticamente\n",
+    "- Comparar equipos usando números\n",
     "\n",
-    "**Herramientas:**\n",
-    "- Python\n",
-    "- Pandas (datos)\n",
-    "- Seaborn (gráficos bonitos)\n",
-    "- NumPy (cálculos)"
+    "**¿Por qué es interesante?**\n",
+    "¡Los números nos cuentan historias! Aprenderemos a escuchar lo que nos dicen los datos de fútbol.\n",
+    "\n",
+    "---"
    ]
   },
   {
