--- a/bloque-2/semana-9/visualizacion-datos.ipynb
+++ b/bloque-2/semana-9/visualizacion-datos.ipynb
@@ -5,25 +5,20 @@
    "id": "c1627a89",
    "metadata": {},
    "source": [
-    "# **Semana 4: Gráficos Básicos de Fútbol**\n",
+    "# **Semana 9: Gráficos Básicos de Fútbol**\n",
     "\n",
-    "## Ciencia de Datos en el Deporte - Fundamentos con Python\n",
-    "\n",
-    "### **Bloque 2: Análisis de Datos Deportivos**\n",
+    "## Bloque 2: Explorando Datos Deportivos con Python\n",
     "\n",
     "---\n",
     "\n",
-    "**Objetivos de Aprendizaje:**\n",
-    "- Entender por qué los gráficos son útiles\n",
-    "- Crear gráficos simples con seaborn\n",
-    "- Comparar equipos locales vs visitantes\n",
-    "- Hacer gráficos bonitos y fáciles de entender\n",
+    "**Lo que aprenderemos hoy:**\n",
+    "- Crear gráficos de barras para comparar equipos\n",
+    "- Hacer histogramas para ver distribuciones de goles\n",
+    "- Usar boxplots para análisis estadístico visual\n",
+    "- Personalizar colores y títulos en seaborn\n",
     "\n",
-    "**Herramientas:**\n",
-    "- Python\n",
-    "- Pandas (datos)\n",
-    "- Seaborn (gráficos bonitos)\n",
-    "- Matplotlib (mostrar gráficos)\n",
+    "**¿Por qué es interesante?**\n",
+    "¡Una imagen vale más que mil números! Aprenderemos a convertir datos en gráficos que cuenten historias del fútbol.\n",
     "\n",
     "---"
    ]
