--- a/bloque-3/semana-11/modelado-predictivo-introduccion.ipynb
+++ b/bloque-3/semana-11/modelado-predictivo-introduccion.ipynb
@@ -5,7 +5,7 @@
    "id": "2e41fdb2",
    "metadata": {},
    "source": [
-    "# **Mi Primera Predicción de Fútbol**\n",
+    "# **Semana 11: Mi Primera Predicción de Fútbol**\n",
     "\n",
     "## Aprendiendo a Predecir con Datos - Nivel Preparatoria\n",
     "\n",
@@ -22,14 +22,7 @@
     "**Lo que necesitas:**\n",
     "- Saber usar pandas (lo básico)\n",
     "- Matemáticas de preparatoria\n",
-    "- Ganas de experimentar\n",
-    "\n",
-    "**Herramientas simples:**\n",
-    "- Python\n",
-    "- pandas (para organizar datos)\n",
-    "- Una nueva herramienta llamada scikit-learn (muy fácil de usar)\n",
-    "\n",
-    "---"
+    "- Ganas de experimentar"
    ]
   },
   {
