--- a/bloque-3/semana-12/modelos-avanzados-clasificacion.ipynb
+++ b/bloque-3/semana-12/modelos-avanzados-clasificacion.ipynb
@@ -5,7 +5,7 @@
    "id": "082700a8",
    "metadata": {},
    "source": [
-    "# **Probando Otro Predictor: Random Forest**\n",
+    "# **Semana 12: Probando Otro Predictor: Random Forest**\n",
     "\n",
     "## Mi Segunda Herramienta de Predicción - Nivel Preparatoria\n",
     "\n",
@@ -22,13 +22,7 @@
     "**Lo que necesitas:**\n",
     "- Haber practicado con el primer predictor (Regresión Logística)\n",
     "- Saber usar pandas y hacer gráficos básicos\n",
-    "- Curiosidad por experimentar\n",
-    "\n",
-    "**Herramientas:**\n",
-    "- Las mismas de antes: pandas, seaborn\n",
-    "- Una nueva: Random Forest (muy fácil de usar)\n",
-    "\n",
-    "---"
+    "- Curiosidad por experimentar"
    ]
   },
   {
