--- a/bloque-3/semana-13/metricas-avanzadas-evaluacion.ipynb
+++ b/bloque-3/semana-13/metricas-avanzadas-evaluacion.ipynb
@@ -5,7 +5,7 @@
    "id": "32d20b76",
    "metadata": {},
    "source": [
-    "# **Evaluando Nuestros Predictores: ¿Qué Tan Buenos Son?**\n",
+    "# **Semana 13: Evaluando Nuestros Predictores: ¿Qué Tan Buenos Son?**\n",
     "\n",
     "## Mi Tercera Herramienta - Midiendo el Éxito - Nivel Preparatoria\n",
     "\n",
@@ -22,13 +22,7 @@
     "**Lo que necesitas:**\n",
     "- Haber trabajado con predictores antes (Regresión Logística, Random Forest)\n",
     "- Saber usar pandas y hacer gráficos básicos\n",
-    "- Curiosidad por entender si nuestros resultados son buenos\n",
-    "\n",
-    "**Herramientas que usaremos:**\n",
-    "- Las mismas de antes: pandas, seaborn\n",
-    "- Nuevas herramientas para medir qué tan buenos son nuestros predictores\n",
-    "\n",
-    "---"
+    "- Curiosidad por entender si nuestros resultados son buenos"
    ]
   },
   {
