--- a/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
+++ b/bloque-3/semana-14/feature-engineering-optimizacion.ipynb
@@ -5,7 +5,7 @@
    "id": "b29b937a",
    "metadata": {},
    "source": [
-    "# **Mejorando Nuestros Predictores: Creando Variables Más Útiles**\n",
+    "# **Semana 14: Mejorando Nuestros Predictores: Creando Variables Más Útiles**\n",
     "\n",
     "## Mi Cuarta Herramienta - Haciendo Predictores Mejores - Nivel Preparatoria\n",
     "\n",
@@ -22,14 +22,7 @@
     "**Lo que necesitas:**\n",
     "- Haber trabajado con predictores antes (semanas anteriores)\n",
     "- Entender qué es precisión y cómo medir si un predictor es bueno\n",
-    "- Curiosidad por hacer que nuestros predictores mejoren\n",
-    "\n",
-    "**Herramientas que usaremos:**\n",
-    "- Crear nuevas variables combinando las existentes\n",
-    "- Probar diferentes configuraciones para nuestros predictores\n",
-    "- Gráficos para ver qué variables son más importantes\n",
-    "\n",
-    "---"
+    "- Curiosidad por hacer que nuestros predictores mejoren"
    ]
   },
   {
