feat: Add missing Semana 4 title to pandas-numpy notebook
- Complete the notebook title updates across all course weeks
- All notebooks now have consistent 'Semana X:' titles matching their folder structure

--- a/bloque-1/semana-4/pandas-numpy-introduccion.ipynb
+++ b/bloque-1/semana-4/pandas-numpy-introduccion.ipynb
@@ -5,6 +5,8 @@
    "id": "5959e26a",
    "metadata": {},
    "source": [
+    "# Semana 4: Introducción a Pandas y NumPy\n",
+    "\n",
     "## 1. Teoría: ¿Qué son NumPy y Pandas?\n",
     "\n",
     "### NumPy (Numerical Python)\n",
@@ -13,46 +15,7 @@
     "\n",
     "- **Arrays multidimensionales eficientes**: Estructuras de datos optimizadas para cálculos numéricos\n",
     "- **Operaciones matemáticas vectorizadas**: Operaciones rápidas en arrays completos\n",
-    "- **Funciones matemáticas avanzadas**: Trigonometría, álgebra lineal, estadística\n",
-    "- **Base para otras librerías**: Pandas, scikit-learn, matplotlib se basan en NumPy\n",
-    "\n",
-    "### Pandas (Panel Data)\n",
-    "\n",
-    "**Pandas** es la biblioteca principal para análisis y manipulación de datos en Python. Ofrece:\n",
-    "\n",
-    "- **DataFrames**: Estructuras de datos tabulares (como Excel o SQL)\n",
-    "- **Series**: Estructuras de datos unidimensionales (como columnas)\n",
-    "- **Lectura/escritura de archivos**: CSV, Excel, JSON, SQL, etc.\n",
-    "- **Operaciones de datos**: Filtrado, agrupación, agregación, unión\n",
-    "\n",
-    "### Analogía Deportiva\n",
-    "\n",
-    "Piensa en NumPy y Pandas como herramientas para un **analista deportivo profesional**:\n",
-    "\n",
-    "- **NumPy es como la calculadora científica**: Para cálculos rápidos y precisos\n",
-    "  - Calcular promedios de goles, velocidades, distancias\n",
-    "  - Operaciones matemáticas complejas con estadísticas\n",
-    "  \n",
-    "- **Pandas es como la hoja de cálculo inteligente**: Para organizar y analizar datos\n",
-    "  - Tablas de resultados, estadísticas de jugadores\n",
-    "  - Filtrar partidos por fecha, equipo, competición\n",
-    "  - Agrupar datos por temporada, liga, posición\n",
-    "\n",
-    "### ¿Por qué son Importantes en Análisis Deportivo?\n",
-    "\n",
-    "**Eficiencia**: Procesan miles de partidos en segundos\n",
-    "**Flexibilidad**: Manejan cualquier tipo de dato deportivo\n",
-    "**Integración**: Se conectan fácilmente con otras herramientas\n",
-    "**Estándar**: Utilizadas por equipos profesionales mundialmente\n",
-    "\n",
-    "### Lo que Lograremos Hoy\n",
-    "\n",
-    "Al final de esta sesión, podrás:\n",
-    "- Crear y manipular arrays de NumPy\n",
-    "- Construir DataFrames con datos deportivos\n",
-    "- Leer archivos CSV de resultados deportivos\n",
-    "- Realizar análisis básicos (promedios, filtros, agrupaciones)\n",
-    "- Preparar datos para visualización y análisis avanzado"
+    "- **Funciones matemáticas avanzadas**: Trigonometría, álgebra lineal, estadística"
    ]
   },
   {
